# slurp

./: .build.yml  .clang-format  .editorconfig  .gitignore  README.md  box.c  lock.c  main.c  meson.build  pool-buffer.c  render.c  slurp.1.scd
include/: box.h  lock.h  pool-buffer.h  render.h  slurg.h  slurp.h
protocol/: meson.build
